# django_hip_service

./: .dockerignore  .env  .gitignore  .pylama.ini  .release-please-config.json  AppVersion.txt  AppVersionHash.txt  CHANGELOG.md  Dockerfile  LICENSE  README.md  VERSION  docker-compose.yml  docker_build_auto.bat  docker_build_auto.sh  hip.db  manage.py  models.docx  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yaml  labeler.yml  pylama-check.yml  release-please.yml
DockerCMD/: admin.py  apps.py  models.py
cda/: models.py
cdr/: admin.py  models.py  schema.py
cdr/migrations/: 0001_initial.py  0002_alter_patient_table.py  0003_alter_patient_patient_id.py  0004_patient_gmt_updated.py
cdr/utils/: __init__.py  utils.py
config/: .env  default.conf.template  entrypoint.sh  gunicorn.py
deploy/: deploy.py
django_hip_service/: api.py  asgi.py  schema.py  settings.py  urls.py  wsgi.py
docker/latest/: .dockerignore  .env  Dockerfile  Dockerfile.base
esb_standard/: admin.py  apps.py  models.py  resources.py  views.py
esb_standard/migrations/: 0001_initial.py  0002_alter_messageformat_is_custom.py
esb_standard/templates/esb_standard/: index.html
evaluation/: apps.py  schema.py  template-service-params.json  utils.py  views.py
evaluation/static/evaluation/services/: EMR-PL-04-个人信息查询服务-T01.xml  EMR-PL-22-门诊挂号信息查询服务-F01.xml  EMR-PL-22-门诊挂号信息查询服务-T01.xml
hipmessageservice/: admin.py  api.py  apps.py  authentication.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
hipmessageservice/common/: Utils.py  token.py
hipmessageservice/fixtures/: samples.json
hipmessageservice/fixtures/hipmessageservice/: sample.json
hipmessageservice/migrations/: 0001_initial.py  0002_firm_application_firm.py  0003_serviceapplicationstatus_is_online.py  0004_application_is_customer.py  0005_alter_application_application_name_and_more.py  0006_statusship_service_applications_and_more.py  0007_firm_firm_name_short.py  0008_cda.py  0009_cda_notes.py  0010_alter_cda_firm_alter_cda_value_and_more.py  0011_alter_application_is_customer_and_more.py  0012_alter_application_application_id.py  0013_alter_application_application_id.py  0014_alter_firm_firm_id.py  0015_firm_api_url.py
hipmessageservice/static/hipmessageservice/services/schemas/cdas/: C0001.xsd  C0002.xsd  (+51 more)
hipmessageservice/templates/hipmessageservice/: base.html  home.html  index.html  main.html  test.html  test3.html
hipmessageservice/templates/hipmessageservice/partials/: menu.html  nav.html
hipmessageservice/templatetags/: filters.py
hipmessageservice/utils/: database.py  encrypt.py  test.py
requirements/: base.txt  local.txt  production.txt
scripts/: build-base-image.sh  build-image.sh  push-image.sh  push-images.sh  semantic-versioner.py
(+68 files in other folders)
