[project]
name = "django_hip_service"
version = "1.0.1a3"
description = "医院信息平台管理系统"
authors = [
    {name = "liaozhiming", email = "liaozhimingandy@qq.com"},
]
dependencies = [
    "django>=5.0.3",
    "djangorestframework>=3.15.0",
    "psycopg2-binary>=2.9.9",
    "openpyxl>=3.1.2",
    "pandas>=2.2.1",
    "xlsxwriter>=3.2.0",
    "gunicorn>=21.2.0",
    "docutils>=0.20.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "APACHE-2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

test = [
    "django-debug-toolbar>=4.3.0",
    "pytest>=8.1.1",
]

doc = ["mkdocs"]