[project]
name = "django_hip_service"
version = "1.0.1a3"
description = "医院信息平台管理系统"
authors = [
    {name = "liaozhiming", email = "liaozhimingandy@qq.com"},
]
dependencies = [
    "django>=5.0.3",
    "psycopg2-binary>=2.9.9",
    "openpyxl>=3.1.2",
    "pandas>=2.2.1",
    "xlsxwriter>=3.2.0",
    "gunicorn>=21.2.0",
    "docutils>=0.20.1",
    "lxml>=5.1.0",
    "pypinyin>=0.51.0",
    "django-ninja>=1.1.0",
    "pyjwt>=2.8.0",
    "requests>=2.32.2",
    "json2xml>=5.0.1",
    "loguru>=0.7.2",
    "pycryptodome>=3.20.0",
    "gmssl>=3.2.2",
    "django-json-widget>=2.0.1",
    "graphene-django>=3.2.2",
    "pymssql>=2.3.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "APACHE-2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

test = [
    "pytest>=8.1.1",
]

doc = ["mkdocs"]
[tool.pdm.dev-dependencies]
dev = [
    "django-debug-toolbar>=4.3.0",
]
